# sdl

./: BUILD.gn
include/: SDL_config.h  SDL_config_mojo.h  SDL_main.h  SDL_platform.h
src/: SDL.c
src/events/: SDL_mouse_c.h  SDL_windowevents_c.h
src/main/mojo/: SDL_mojo_main.cc  SDL_mojo_main.h
src/video/: SDL_sysvideo.h  SDL_video.c
src/video/mojo/: SDL_mojoasyncwaiter.cc  SDL_mojoasyncwaiter.h  SDL_mojoevents.cc  SDL_mojoevents_c.h  SDL_mojoopengles.cc  SDL_mojoopengles.h  SDL_mojovideo.cc  SDL_mojovideo.h  SDL_mojowindow.cc  SDL_mojowindow.h
