config("configuration") {
  include_dirs = [ "include" ]
  cflags = [ "-w" ]
  defines = [ "__MOJO__", "SDL_VIDEO_MOJO_DRIVER" ]
}

static_library("sdl") {
  configs += [ ":configuration" ]

  sources = [
    "include/SDL.h",
    "src/atomic/SDL_atomic.c",
    "src/atomic/SDL_spinlock.c",
    "src/audio/disk/SDL_diskaudio.c",
    "src/audio/dummy/SDL_dummyaudio.c",
    "src/audio/SDL_audio.c",
    "src/audio/SDL_audiocvt.c",
    "src/audio/SDL_audiodev.c",
    "src/audio/SDL_audiotypecvt.c",
    "src/audio/SDL_mixer.c",
    "src/audio/SDL_wave.c",
    "src/cpuinfo/SDL_cpuinfo.c",
    "src/events/SDL_clipboardevents.c",
    "src/events/SDL_dropevents.c",
    "src/events/SDL_events.c",
    "src/events/SDL_gesture.c",
    "src/events/SDL_keyboard.c",
    "src/events/SDL_mouse.c",
    "src/events/SDL_quit.c",
    "src/events/SDL_touch.c",
    "src/events/SDL_windowevents.c",
    "src/file/SDL_rwops.c",
    "src/filesystem/dummy/SDL_sysfilesystem.c",
    "src/haptic/dummy/SDL_syshaptic.c",
    "src/haptic/SDL_haptic.c",
    "src/joystick/dummy/SDL_sysjoystick.c",
    "src/joystick/SDL_gamecontroller.c",
    "src/joystick/SDL_joystick.c",
    "src/libm/e_atan2.c",
    "src/libm/e_log.c",
    "src/libm/e_pow.c",
    "src/libm/e_rem_pio2.c",
    "src/libm/e_sqrt.c",
    "src/libm/k_cos.c",
    "src/libm/k_rem_pio2.c",
    "src/libm/k_sin.c",
    "src/libm/k_tan.c",
    "src/libm/s_atan.c",
    "src/libm/s_copysign.c",
    "src/libm/s_cos.c",
    "src/libm/s_fabs.c",
    "src/libm/s_floor.c",
    "src/libm/s_scalbn.c",
    "src/libm/s_sin.c",
    "src/libm/s_tan.c",
    "src/loadso/dummy/SDL_sysloadso.c",
    "src/main/dummy/SDL_dummy_main.c",
    "src/main/mojo/SDL_mojo_main.cc",
    "src/power/SDL_power.c",
    "src/render/SDL_d3dmath.c",
    "src/render/SDL_render.c",
    "src/render/SDL_yuv_mmx.c",
    "src/render/SDL_yuv_sw.c",
    "src/render/software/SDL_blendfillrect.c",
    "src/render/software/SDL_blendline.c",
    "src/render/software/SDL_blendpoint.c",
    "src/render/software/SDL_drawline.c",
    "src/render/software/SDL_drawpoint.c",
    "src/render/software/SDL_render_sw.c",
    "src/render/software/SDL_rotate.c",
    "src/SDL_assert.c",
    "src/SDL.c",
    "src/SDL_error.c",
    "src/SDL_hints.c",
    "src/SDL_log.c",
    "src/stdlib/SDL_getenv.c",
    "src/stdlib/SDL_iconv.c",
    "src/stdlib/SDL_malloc.c",
    "src/stdlib/SDL_qsort.c",
    "src/stdlib/SDL_stdlib.c",
    "src/stdlib/SDL_string.c",
    "src/thread/generic/SDL_syscond.c",
    "src/thread/generic/SDL_sysmutex.c",
    "src/thread/generic/SDL_syssem.c",
    "src/thread/generic/SDL_systhread.c",
    "src/thread/generic/SDL_systls.c",
    "src/thread/SDL_thread.c",
    "src/timer/dummy/SDL_systimer.c",
    "src/timer/SDL_timer.c",
    "src/video/dummy/SDL_nullevents.c",
    "src/video/dummy/SDL_nullframebuffer.c",
    "src/video/dummy/SDL_nullvideo.c",
    "src/video/SDL_blit_0.c",
    "src/video/SDL_blit_1.c",
    "src/video/SDL_blit_A.c",
    "src/video/SDL_blit_auto.c",
    "src/video/SDL_blit.c",
    "src/video/SDL_blit_copy.c",
    "src/video/SDL_blit_N.c",
    "src/video/SDL_blit_slow.c",
    "src/video/SDL_bmp.c",
    "src/video/SDL_clipboard.c",
    "src/video/SDL_egl.c",
    "src/video/SDL_fillrect.c",
    "src/video/SDL_pixels.c",
    "src/video/SDL_rect.c",
    "src/video/SDL_RLEaccel.c",
    "src/video/SDL_shape.c",
    "src/video/SDL_stretch.c",
    "src/video/SDL_surface.c",
    "src/video/SDL_video.c",
    "src/video/mojo/SDL_mojoasyncwaiter.cc",
    "src/video/mojo/SDL_mojoevents.cc",
    "src/video/mojo/SDL_mojoopengles.cc",
    "src/video/mojo/SDL_mojowindow.cc",
    "src/video/mojo/SDL_mojovideo.cc",
  ]

  deps = [
    "//base",
    "//mojo/common",
    "//mojo/public/c/gpu",
    "//mojo/public/c/gpu:gpu_onscreen",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/utility",
    "//mojo/services/native_viewport/interfaces",
  ]
}
